# pocket-up

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  build.rs  com.radioactivehamster.pocket_up.gschema.xml
deb/usr/share/applications/: com.radioactivehamster.pocket_up.desktop
resources/: com.radioactivehamster.pocket_up.gschema.xml
resources/styles/: dark.css  light.css
src/: about_dialog.rs  activate.rs  add_github_access_token_modal.rs  builders.rs  button_row.rs  config.rs  core_row.rs  downloader.rs  header.rs  help_window.rs  main.rs  set_github_access_token_modal.rs  window_child.rs
