[package]
name = "pocket-up"
version = "0.1.0"
description = "A forthcoming GUI app to download and update openFPGA cores on the Analogue Pocket."
authors = ["James Benner <james.benner@gmail.com>"]
license = "MIT"
repository = "https://github.com/jbenner-radham/pocket-up/"
homepage = "https://github.com/jbenner-radham/pocket-up/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.5", package = "gtk4", features = ["v4_6"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.92"
