[package]
name = "pocket-up"
version = "0.1.1"
description = "An updater for the Analogue Pocket."
authors = ["James Benner <james.benner@gmail.com>"]
license = "MIT"
repository = "https://github.com/jbenner-radham/pocket-up/"
homepage = "https://github.com/jbenner-radham/pocket-up/"
edition = "2021"

[package.metadata.deb]
extended-description = "An app to download and update openFPGA cores on the Analogue Pocket."
depends = "$auto"
priority = "optional"
section = "utils"
assets = [
  ["target/release/pocket-up", "usr/bin/", "755"],
  ["resources/com.radioactivehamster.pocket_up.gschema.xml", "usr/share/glib-2.0/schemas/", "644"],
  ["deb/usr/share/applications/com.radioactivehamster.pocket_up.desktop", "usr/share/applications/", "644"]
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.3.1", package = "libadwaita", features = ["gtk_v4_6", "v1_1"]}
anyhow = "1.0.69"
gtk = { version = "0.6.1", package = "gtk4", features = ["v4_6"] }
heck = "0.4.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.92"
textwrap = "0.16.0"
toml = "0.7.2"
zip = { version = "0.6.4", features = ["deflate"] }
